--- a/Biblioteczka/Views/Reservation/Index.cshtml
+++ b/Biblioteczka/Views/Reservation/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Biblioteczka.Areas.Identity.Data
 @using X.PagedList
+@using Biblioteczka.Data;
 
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
@@ -13,7 +14,7 @@
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
 <partial name="Templates/_SearchBar" model="@Url.Action("Index")"/>
 
-@if (User.IsInRole("Admin")){
+@if (User.IsInRole(AppData.Admin) || User.IsInRole(AppData.Librarian)){
     <partial name="Templates/_ReservationListAdmin"/>
 }
 else if (SignInManager.IsSignedIn(User)){
