--- a/Biblioteczka/Views/Shared/Templates/_CopyList.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_CopyList.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Biblioteczka.Areas.Identity.Data
-
+@using Biblioteczka.Data;
 @inject SignInManager<AppUser> SignInManager
 
 <div class="bg-white rounded shadow ps-3 pe-3 pt-1 pb-1 mt-3">
@@ -10,7 +10,7 @@
                 <th scope="col">Numer</th>
                 <th scope="col">Status</th>
                 <th scope="col" class="text-end">
-                    @if (User.IsInRole("Admin")){
+                    @if (User.IsInRole(AppData.Admin) || User.IsInRole(AppData.Librarian)){
                         <a class="btn btn-primary" asp-route-id="@Model.Book.Id" asp-controller="Copy" asp-action="Create"><i class="bi bi-plus-lg"></i></a>
                     }
                 </th>
@@ -31,7 +31,7 @@
 
                     <td class="text-end">
                        
-                        @if (User.IsInRole("Admin")){
+                        @if (User.IsInRole(AppData.Admin) || User.IsInRole(AppData.Librarian)){
                             <a class="btn btn-success mb-1" asp-route-id="@Copy.Id" asp-controller="Copy" asp-action="Edit"><i class="bi bi-pencil-square"></i></a>
                             @if (Copy.Status == "1"){
                                 <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@Copy.Id"><i class="bi bi-trash3-fill"></i></a>
