Added editing and changed details of user, role can be null

--- a/Biblioteczka/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Biblioteczka/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,6 +11,12 @@
 		<hr />
 		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<div class="mb-3">
+			<label asp-for="Input.UserName">Login</label>
+			<input asp-for="Input.UserName" class="form-control"
+				data-val-required="Pole Login jest wymagane."/>
+			<span asp-validation-for="Input.UserName" class="text-danger"></span>
+		</div>
+		<div class="mb-3">
 			<label asp-for="Input.Email">Email</label>
 			<input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" 
 				data-val-email="Pole Email nie jest prawidłowym adresem email." 
