--- a/Biblioteczka/Views/User/Role.cshtml
+++ b/Biblioteczka/Views/User/Role.cshtml
@@ -16,9 +16,10 @@
             </div>
 
             <div class="mb-3">
+                <label>Rola</label>
                 <select name="Role" class="form-control selected-value">
                     @foreach (var item in @ViewBag.Roles){
-                        @if (item == @Model.Role.Name){
+                        @if (Model.Role!=null && !string.IsNullOrEmpty(Model.Role.Name) && item == @Model.Role.Name){
                             <option value="@item" selected>@item</option>
                         }
                         else {
