--- a/Biblioteczka/Views/User/Details.cshtml
+++ b/Biblioteczka/Views/User/Details.cshtml
@@ -1,15 +1,21 @@
-﻿@{
+﻿@using Biblioteczka.Data;
+@{
      ViewData["Title"] = "O użytkowniku";
 }
 
-<partial name="Templates/_BackButton"/>
+<div class="mb-3 d-flex justify-content-between">
+    <partial name="Templates/_BackButton"/>
+
+    @if (User.IsInRole(AppData.Admin)){
+        <a class="btn btn-success" asp-route-id="@Model.User.Id" asp-controller="User" asp-action="Edit"><i class="bi bi-pencil-square"></i><label class="ms-2">Edytuj</label></a>
+    }
+</div>
 
 <div class="col-sm-6 mx-auto bg-white rounded shadow d-flex">
     <div class="col-12 p-3">
         <div class="text-center">
             <h4>@Model.User.UserName</h4>
-            <p class="mt-3">Id: @Model.User.Id</p>
-            <p>Email: @Model.User.Email</p>
+            <p class="mt-3">Email: @Model.User.Email</p>
             @if (Model.Role!=null && !string.IsNullOrEmpty(Model.Role.Name)){
                 <p>Rola: @Model.Role.Name</p>
             }
