--- a/Biblioteczka/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Biblioteczka/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -18,7 +18,7 @@
             <h4>Zmień ustawienia konta</h4>
             <hr />
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 mb-3">
                     <partial name="_ManageNav" />
                 </div>
                 <div class="col-md-9">
