--- a/Biblioteczka/Views/Author/Create.cshtml
+++ b/Biblioteczka/Views/Author/Create.cshtml
@@ -2,9 +2,11 @@
      ViewData["Title"] = "Dodaj autora";
 }
 
-<partial name="Templates/_BackButton"/>
+<div class="mb-3">
+    <partial name="Templates/_BackButton"/>
+</div>
 
-<div class="col-sm-6 mx-auto">
+<div class="col-sm-8 col-md-6 mx-auto">
     <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
     <div class="bg-white rounded shadow p-4">
         <form asp-controller="Author" asp-action="Create" method="post">
