--- a/Biblioteczka/Views/Book/Edit.cshtml
+++ b/Biblioteczka/Views/Book/Edit.cshtml
@@ -3,9 +3,11 @@
     ViewData["Title"] = "Edytuj książkę";
 }
 
-<partial name="Templates/_BackButton"/>
+<div class="mb-3">
+    <partial name="Templates/_BackButton"/>
+</div>
 
-<div class="col-sm-6 mx-auto">
+<div class="col-sm-8 col-md-6 mx-auto">
     <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
     <div class="bg-white rounded shadow p-4">
         <form asp-controller="Book" asp-action="Edit" method="post" enctype="multipart/form-data">
@@ -18,28 +20,8 @@
 
             <div class="mb-3">
                 <label for="Author">Autor</label><br>
-                <select id="Author" name="Book.AuthorId" class="form-control">
-                    @foreach (var Author in @Model.Authors)
-                    {
-                        @if (@Author.Id == @Model.Book.AuthorId){
-                            <option value="@Author.Id" selected>@Author.Name @Author.LastName</option>
-                        }
-                        else {
-                            <option value="@Author.Id">@Author.Name @Author.LastName</option>
-                        }
-                    }
-                </select>
+                <p class="form-control">@Model.Author.Name @Model.Author.LastName</p>
             </div>
-            <script type="text/javascript">
-                $('#Author').select2({
-                   theme: "bootstrap-5",
-                   "language": {
-                       "noResults": function(){
-                           return "Nie znaleziono.";
-                       }
-                   },             
-                });
-            </script>
 
             <div class="mb-3">
                 <label for="Description">Opis</label><br>
