--- a/Biblioteczka/Views/Shared/Templates/_BackButton.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_BackButton.cshtml
@@ -1,1 +1,1 @@
-﻿<a class="btn btn-primary position-absolute" onclick="javascript:history.go(-1)"><i class="bi bi-arrow-left"></i></a>
+﻿<a class="btn btn-primary" onclick="javascript:history.go(-1)"><i class="bi bi-arrow-left"></i></a>
