--- a/Biblioteczka/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Biblioteczka/Areas/Identity/Pages/Account/Register.cshtml
@@ -44,7 +44,7 @@
 			</div>
 
 			<hr />
-			<h5>Informacje o użytkowniku</h5>
+			<h5>Dane dotyczące użytkownika</h5>
 			<div class="mb-3">
 				<label asp-for="Input.Name">Imię</label>
 				<input asp-for="Input.Name" class="form-control"
