--- a/Biblioteczka/Views/Book/Details.cshtml
+++ b/Biblioteczka/Views/Book/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Biblioteczka.Areas.Identity.Data
 @using X.PagedList
-@using Biblioteczka.Data;
+@using Biblioteczka.Data
 
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
