--- a/Biblioteczka/Views/Shared/Templates/_UserList.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_UserList.cshtml
@@ -8,7 +8,15 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col">Id</th>
+                <th scope="col"><label class="me-2">Imię</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "User", new { sortOrder = "NameAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "User", new { sortOrder = "NameDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Nazwisko</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "User", new { sortOrder = "LastNameAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "User", new { sortOrder = "LastNameDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Nr karty</label></th>
                 <th scope="col"><label class="me-2">Login</label>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "User", new { sortOrder = "UserNameAsc" })"><i class="bi bi-arrow-up"></i></a>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "User", new { sortOrder = "UserNameDesc" })"><i class="bi bi-arrow-down"></i></a>
@@ -26,7 +34,9 @@
             @foreach (var user in Model.UserList)
             {
                 <tr>
-                    <th scope="row">@user.User.Id</th>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Details">@user.Profile.Name</a></td>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Details">@user.Profile.LastName</a></td>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Details">@user.Profile.LibraryCardNumber</a></td>
                     <td><a class="text-decoration-none text-dark" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Details">@user.User.UserName</a></td>
                     <td><a class="text-decoration-none text-dark" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Details">@user.User.Email</a></td>
                     @if (user.Role!=null && !string.IsNullOrEmpty(user.Role.Name)){
@@ -41,14 +51,16 @@
                         <td class="text-end">
                             @if (UserManager.GetUserId(User) != @user.User.Id){
                                 <a class="btn btn-primary mb-1" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Role">Rola</a>
-                                <a class="btn btn-success mb-1" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Edit"><i class="bi bi-pencil-square"></i></a>
+                                <a class="btn btn-success mb-1" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Edit"><i class="bi bi-pencil-square"></i><label class="ms-2">Konto</label></a>
+                                <a class="btn btn-success mb-1" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Profile"><i class="bi bi-pencil-square"></i><label class="ms-2">Profil</label></a>
                                 <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@user.User.Id"><i class="bi bi-trash3-fill"></i></a>
                                 <form asp-route-id="@user.User.Id" asp-controller="User" asp-action="Delete" method="post">
                                     <partial name="Templates/_ModalDelete" model="@user.User.Id"/>
                                 </form>
                             }
                             else {
-                                <a class="btn btn-success" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Edit"><i class="bi bi-pencil-square"></i><label class="ms-2">Edytuj</label></a>
+                                <a class="btn btn-success mb-1" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Edit"><i class="bi bi-pencil-square"></i><label class="ms-2">Konto</label></a>
+                                <a class="btn btn-success mb-1" asp-route-id="@user.User.Id" asp-controller="User" asp-action="Profile"><i class="bi bi-pencil-square"></i><label class="ms-2">Profil</label></a>
                             }
                         </td>
                     }
